# hpc_bp_assignment

./: .clang-format  CMakeLists.txt  GTest.cmake  Makefile  README.md  format_all.sh  ljmds  ljmds_OMP  main.c
.github/workflows/: cmake.yml
examples/: argon_2.rest
include/: IO.h  defs.h  engine.h  input_output.h  utilities.h
plots_benchmark/: openmp_plots.py
src/: IO.c  defs.c  engine.c  input_output.c  utilities.c
tests/: CMakeLists.txt  argon_2.inp  regression-MPI.sh  regression-OMP.sh  regression.sh  test_engine.cpp  test_engine_mpi.cpp  test_mdsys_alloc.cpp  test_utilities.cpp  test_verlet.cpp
